force-app/main/default/objects/Impediment__c/fields/Dead_line_para_solucao__c.field-meta.xml
<CustomField>
    <fullName>Dead_line_para_solucao__c</fullName>
    <label>Dead line para solucao</label>
    <type>DateTime</type>
</CustomField>