force-app/main/default/objects/Impediment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Impediment.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>