force-app/main/default/objects/Impediment__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>Describes the solution to the impediment.</description>
    <inlineHelpText>Describes the solution to the impediment (optional).</inlineHelpText>
    <label>Solution</label>
    <type>TextArea</type>
</CustomField>