force-app/main/default/objects/Impediment__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicate to which task your Impediment is related to.</description>
    <inlineHelpText>Indicate to which task your Impediment is related to.</inlineHelpText>
    <label>Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Develop_Task__c.Work__c</field>
            <operation>equals</operation>
            <valueField>$Source.Work__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Develop_Task__c</referenceTo>
    <relationshipLabel>Impediments</relationshipLabel>
    <relationshipName>Impediments</relationshipName>
    <type>Lookup</type>
</CustomField>