force-app/main/default/objects/Impediment__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <label>Work</label>
    <referenceTo>Work__c</referenceTo>
    <relationshipLabel>Impediments</relationshipLabel>
    <relationshipName>Impediments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>