force-app/main/default/objects/Impediment__c/listViews/Impedimentos.listView-meta.xml
<ListView>
    <fullName>Impedimentos</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Work__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Impedimentos Abertos</label>
</ListView>